<resources>
    <string name="home">HOME</string>
    <string name="in_out">IN/OUT</string>
    <string name="safe">SAFE</string>
    <string name="welcome">WELCOME,</string>
    <string name="juan">JUAN</string>
    <string name="todo">TODO</string>
    <string name="stats">STATS</string>
    <string name="xd">XD</string>
    <string name="kind_of_move">Kind of move</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="concept">Concept</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password_confirm">Password confirm</string>
    <string name="you_do_not_have_an_account_">you don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">SignOut</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="info">Info</string>
    <string name="total_incoming">TOTAL INCOMING  </string>
    <string name="total_outcome">TOTAL OUTCOME  </string>
    <string name="total_in_wallet">TOTAL IN WALLET  </string>
    <string name="_1_000_000">1\'000.000</string>
    <string name="price_sign">$</string>
    <string name="current_date">Current Date</string>
    <string-array name="types_kind_move">
        <item>Incoming</item>
        <item>Expenses</item>
        <item>Safe</item>
    </string-array>
    <string-array name="types_description">
        <item>Transport</item>
        <item>Food</item>
        <item>Clothes</item>
        <item>Market</item>
        <item>Other Stuff</item>
    </string-array>
</resources>